--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,35 @@
-<h1>Events#new</h1>
-<p>Find me in app/views/events/new.html.erb</p>
+<h1>Add events</h1>
+<hr>
+<%= form_for [current_user, @event] do |f| %>
+<section class="section">
+  <div class="field">
+  <%= f.label :title, class: "label" %>
+  <div class="control">
+    <%= f.text_field :title, class: "input" %>
+  </div>
+  <div class="field">
+  <%= f.label :venue, class: "label" %>
+  <div class="control">
+    <%= f.text_field :venue, class: "input" %>
+  </div>
+</div>
+<div class="field">
+  <%= f.label :date, class: "label" %>
+  <div class="control">
+    <%= f.date_field :date, class: "input" %>
+  </div>
+
+<div class="field">
+  <label class="label">Message</label>
+  <div class="control">
+    <textarea class="textarea" placeholder="Textarea"></textarea>
+  </div>
+</div>
+
+<div class="field">
+  <div class="control">
+    <%= f.submit 'Create Event',  class:"button is-link" %>
+  </div>
+</section>
+<% end %>
+
