Do event listing
    * Add index file to show all events
    * Add methods for past events
    * Complete action for show

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,3 +3,11 @@
 <p><%= @event.date%></p>
 <p><%= @event.venue%></p>
 <p><%= @event.description%></p>
+
+<hr>
+
+<% @event.attendees.each do |attendee| %>
+  <ol>
+    <li> <%= attendee.name %></li>
+  </ol>
+<% end %>
