--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,7 @@
 <h1 class="title"><%= @event.title%></h1>
 <hr>
-<p><%= @event.date%></p>
+<% suffix = Date.today < @event.date ? "from now" : "ago" %>
+<p><%= time_ago_in_words(@event.date)%> <%= suffix %> </p>
 <p><%= @event.venue%></p>
 <p><%= @event.description%></p>
 
