Apply some style on events

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add events</h1>
-<hr>
-<%= render "form" %>
+<section class="mt-3">
+  <h1>Add events</h1>
+  <hr>
+  <%= render "form" %>
+</section>
