--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>User signup</h1>
 
-<section>
+<section class="mt-3">
   <%= simple_form_for @user do |f| %>
     <%= f.input :name %>
     <%= f.input :username %>
