--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :date %>
   <%= f.input :venue %>
   <%= f.input :description %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn-primary" %>
 <% end %>
