--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit <%= @event.title %></h1>
-<hr>
-<%= render "form" %>
+<section class="mt-3">
+  <h1>Edit <%= @event.title %></h1>
+  <hr>
+  <%= render "form" %>
+</section>
 
 
