--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,22 +1,38 @@
-<h1 class="title">Heck Yeah</h1>
-<% if Event.any? %>
-  <% if @upcoming_events.any? %>
-    <h2 class="title is-4">Upcoming Events</h2>
-    <ol>
-      <% @upcoming_events.each do |event|%>
-        <li><%= link_to event.title, event%></li>
+<section>
+  <h1>Events</h1>
+  <hr>
+  <div class="row">
+    <% if Event.any? %>
+      <% if @upcoming_events.any? %>
+        <div class="col-md-6">
+          <h2 class="my-3">Upcoming Events</h2>
+          <ul class="list-group">
+            <% @upcoming_events.each do |event|%>
+              <li class="list-group-item"> 
+                <%= event.title %>
+                <%= link_to  "Detail", event, class: "btn btn-primary float-right" %>
+              </li>
+            <% end%>
+          </ul>
+        </div>
       <% end%>
-    </ol>
-  <% end%>
 
-  <% if Event.past_events.any? %>
-    <h2 class="title is-4">Past Events</h2>
-    <ol>
-      <% @past_events.each do |event|%>
-        <li><%= link_to event.title, event%></li>
+      <% if Event.past_events.any? %>
+        <div class="col-md-6">
+          <h2 class="my-3">Past Events</h2>
+          <ul class="list-group">
+            <% @past_events.each do |event|%>
+              <li class="list-group-item"> 
+                <%= event.title %>
+                <%= link_to  "Detail", event, class: "btn btn-primary float-right" %>
+              </li>
+            <% end%>
+          </ul>
+        </div>
       <% end%>
-    </ol>
-  <% end%>
-<% else %>
-  <p>No events yet</p>
-<% end %>
+    <% else %>
+      <p>No events yet</p>
+    <% end %>
+  </div>
+
+</section>
