--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,10 +4,14 @@
 <p><%= time_ago_in_words(@event.date)%> <%= suffix %> </p>
 <p><%= @event.venue%></p>
 <p><%= @event.description%></p>
-<% if !@event.attendees.include? current_user %>
-<%= link_to "Attend Event", join_event_path, class: "btn btn-primary" %>
+<% if Event.past_events.include?(@event) %>
+  <h4>Event ended</h4>
 <% else %>
-<h4>You are attending this event</h4>
+  <% if !@event.attendees.include? current_user %>
+    <%= link_to "Attend Event", join_event_path, class: "btn btn-primary" %>
+  <% else %>
+    <h4>You are attending this event</h4>
+  <% end %>
 <% end %>
 <hr>
 <% if @event.attendees.any? %>
