--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,1 @@
-<h1 class="title"><%= @user.name %></h1>
-
-<% if @user.upcoming_events.any? %>
-<h3 class="is-3">Events <%= @user.name%> will be attending:</h3>
-  <ol>
-    <% @user.upcoming_events.each do |event|%>
-      <li><%= link_to event.title, event%></li> 
-    <% end %>
-  </ol>
-<% end %>
-
-<% if @user.past_events.any? %>
-  <h3 class="is-3"><%= @user.name%> had attended the following:</h3>
-  <ul>
-    <% @user.past_events.each do |event| %>
-     <li><%= link_to event.title, event %></li>
-     <% end %>
-  </ul>
-<% end %>
+<%= render  "user" %>
