--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% if logged_in? %>
+  <%= render  "users/user" %>
+<% else %>
+  <section>
+    <h1>Welcome to events</h1>
+    <hr>
+    <%= render  "events/events" %>
+  </section>
+<% end %>
