Add image feature

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.input :date %>
   <%= f.input :venue %>
   <%= f.input :description %>
+  <%= f.input :picture %>
   <%= f.button :submit, class: "btn-primary" %>
 <% end %>
