--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,6 @@
     <%= f.input :email %>
     <%= f.input :password %>
     <%= f.input :password_confirmation %>
-    <%= f.button :submit %>
+    <%= f.button :submit, class:"btn-primary" %>
   <% end %>
 </section>
