--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,7 +19,7 @@
       <h4>Event ended</h4>
     <% else %>
       <% if !@event.attendees.include? current_user %>
-        <%= link_to "Attend Event", join_event_path, class: "btn btn-primary" %>
+        <%= render "attendances/join_form"%>
       <% else %>
         <h4>You are attending this event</h4>
       <% end %>
