--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,7 +19,10 @@
       <h4>Event ended</h4>
     <% else %>
       <% if !@event.attendees.include? current_user %>
-        <%= render "attendances/join_form"%>
+        <%= link_to "Attend Event", attendances_path(attendance:{event_id: @event.id, attendee_id: current_user.id}),
+        method: :post,
+        class:"btn btn-primary" 
+        %>
       <% else %>
         <h4>You are attending this event</h4>
       <% end %>
