--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,7 +19,7 @@
       <h4>Event ended</h4>
     <% else %>
       <% if !@event.attendees.include? current_user %>
-        <%= link_to "Attend Event", attendances_path(attendance:{event_id: @event.id, attendee_id: current_user.id}),
+        <%= link_to "Attend Event", attendances_path(attendance:{event_id: @event.id, attendee_id: @attendee_id}),
         method: :post,
         class:"btn btn-primary" 
         %>
