--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="<%=user_path(current_user)%>">Profile</a>
-            <a class="dropdown-item" href="#">Edit Profile</a>
+            <a class="dropdown-item" href="<%= edit_user_path(current_user)%>">Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="<%=logout_path%>" method="delete">Logout</a>
           </div>
