Create Invitation form
1. Update routes to include new and create actions for invitations
resources
2. Create invite form - 2 hidden fields for event_id and invitee_id and
a button to submit
3. Update users_invite_page_spec.rb to reflect invite form

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,7 +36,7 @@
       <% end %>
     <% end %>
     <% if current_user == @event.creator %>
-      <%= form_tag(invite_users_path(@event.creator.id,@event), method: "get") do %>
+      <%= form_tag(add_invitees_path(@event.creator.id,@event), method: "get") do %>
         <%= hidden_field_tag :event_id, @event.id %>
         <%= hidden_field_tag :creator_id, @creator.id %>
         <%= submit_tag "Invite People", class: "btn btn-info"%>
