--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,11 +36,7 @@
       <% end %>
     <% end %>
     <% if current_user == @event.creator %>
-      <%= form_tag(add_invitees_path(@event.creator.id,@event), method: "get") do %>
-        <%= hidden_field_tag :event_id, @event.id %>
-        <%= hidden_field_tag :creator_id, @creator.id %>
-        <%= submit_tag "Invite People", class: "btn btn-info"%>
-      <% end %>
+      <%= link_to "Invite People", add_invitees_path(current_user, @event), class: "btn btn-success"%>
     <% end %>
   </div>
 </div>
