--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <% if logged_in? %>
   <%= render  "users/user" %>
+  <%= render "users/invited_to_events"%>
 <% else %>
   <section>
     <h1>Welcome to events</h1>
