--- a/app/views/users_invite/show.html.erb
+++ b/app/views/users_invite/show.html.erb
@@ -5,8 +5,9 @@
     <% @users.each do |user| %>
       <li class="list-group-item">
         <%= user.name %>
-        <%= render partial: "invitations/form", locals: {event: @event, user: user} %>
+        <%= render partial: "invitations/form", locals: {event: @event, user: user, creator: @creator} %>
       </li>
     <% end %>
   </ul>
 <% end %>
+<%= current_user == @creator %>
