Finalize accepting and declining invites
1. Create new user model instance method called unresponded_invitations
to show each user's invites for which he/she hasn't responded
2. Create event model instance method called unresponsive_invitees
showing users who have been invited but have not yet responded
3. Use these new instance methods in the appropriate views where they
are needed (_invited_to_events.html.erb and events show.html.erb files)

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,7 +18,7 @@
     <% if Event.past_events.include?(@event) %>
       <h4>Event ended</h4>
     <% else %>
-      <% if @event.invitees.include?(current_user) && !@event.attendees.include?(current_user) && !Invitation.where("event_id=? AND invitee_id=?", @event.id, current_user.id).first.responded? %>
+      <% if @event.unresponsive_invitees.include?(current_user) %>
         <h5>You are invited to this event</h5>
         <%= link_to "Accept", attendances_path(attendance:{event_id: @event.id, attendee_id: current_user.id}),
         method: :post,
@@ -32,10 +32,11 @@
           method: :patch,
         class: "btn btn-danger btn-sm"
         %>
-      <% else %>
+      <% elsif @event.attendees.include?(current_user) %>
         <h4>You are attending this event</h4>
       <% end %>
     <% end %>
+    
     <% if @event.attendees.any? %>
       <h3><%= pluralize(@event.attendees.count, "person") %> attending this event: </h3>
       <% @event.attendees.each do |attendee| %>
@@ -44,6 +45,7 @@
         </ul>
       <% end %>
     <% end %>
+
     <% if current_user == @event.creator %>
       <%= link_to "Invite People", add_invitees_path(current_user, @event), class: "btn btn-success"%>
     <% end %>
